# carbon-scribe

./: RAISED_ISSUES.md  WAVE_FOUR.md  implementation.md  pr_submission.md
.github/workflows/: test.yml
corporate-platform/: WAVE_FIVE_ISSUES.md
corporate-platform/corporate-platform-backend/: .env.example  README.md  package-lock.json  package.json
corporate-platform/corporate-platform-backend/prisma/: schema.prisma
corporate-platform/corporate-platform-backend/src/: app.module.ts
corporate-platform/corporate-platform-web/: README.md  package-lock.json  package.json
global-registry/global-registry-api-gateway/: go.mod
project-portal/: WAVE_FIVE_ISSUES.md
project-portal/project-portal-backend/: .env.example  BILLING_WORKER_CHECKLIST.md  BILLING_WORKER_DELIVERABLES.md  BILLING_WORKER_IMPLEMENTATION.md  BILLING_WORKER_INTEGRATION.md  BILLING_WORKER_README.md  BILLING_WORKER_SUMMARY.sh  Makefile  go.mod  go.sum
project-portal/project-portal-web/: ISSUE_DETAILS.md  RAISED_ISSUES.md  TEAMS_ISSUES.md  package-lock.json  package.json  vitest.config.ts
stellar-core/: ISSUE_DETAILS.md  PRE_MAINNET.md
stellar-core/verifiable-registry/: .gitignore
stellar-core/verifiable-registry/contracts/merkle_bridge/: Cargo.toml
stellar-core/verifiable-registry/contracts/merkle_bridge/src/: lib.rs
stellar-core/verifiable-registry/contracts/time_lock/: Cargo.toml
stellar-core/verifiable-registry/contracts/time_lock/src/: lib.rs
verification-layer/iot-device-network/: .gitignore
verification-layer/satellite-oracle-network/: .gitignore
(+198 files in other folders)
