[package]
name = "merkle-bridge"
version = "0.1.0"
edition = "2021"
description = "MerkleBridge contract for verifiable tokenization of carbon credits from external registries"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
